Updating title and search area
Title updated to just the path, and search area now clears the placeholder when it has focus, and replaces the placeholder text if the field loses focus again and the field is still in an empty state.

--- a/assets/index.html
+++ b/assets/index.html
@@ -64,7 +64,7 @@
 	  </div>
 	  </div>
 	  <form class="searchbar hidden">
-	  <input id="search" title="Searching for files or folders." name="q" type="text" maxlength="128" autocomplete="off" placeholder=" search" tabindex="1">
+	  <input id="search" title="Search for files or folders." name="q" type="text" maxlength="128" autocomplete="off" placeholder=" search" tabindex="1" onfocus="this.placeholder=''" onblur="this.placeholder=' search'">
 	  <input type="submit" hidden />
 	  </form>
 	  <div class="toolbox-right">
